Claudia-DEV/src/objects/Sub_Territory__c.object
<CustomObject>
    <description>Sub Territory management for Agencies/Affinities</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GPS that&apos;s assigned to the Sub Territory.  There should always be a 1:1 relationship between Sub Territory and User.</description>
        <label>GPS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sub_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_the_GPS__c</fullName>
        <description>Determines if the currently logged in user is the same as the GPS</description>
        <formula>IF (  GPS__c = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if the currently logged in user is the same as the GPS</inlineHelpText>
        <label>Is Current User the GPS</label>
        <type>Checkbox</type>
    </fields>
    <label>Sub Territory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>